fix(link): ensure inline prop allows text wrapping

--- a/packages/styles/scss/components/link/_link.scss
+++ b/packages/styles/scss/components/link/_link.scss
@@ -85,6 +85,7 @@ $link-focus-text-color: custom-property.get-var(
   }
 
   .#{$prefix}--link.#{$prefix}--link--inline {
+    display: inline;
     text-decoration: underline;
 
     &:focus,
